added another option "-deep" for overriding "deep_domains" in the configure file with specified fuzzing lists. The deep option will act as a 1 level deep recursive domain scan, e.g. admin.subdomain.domain.com
New plugin added crtsh for subdomain grabbing at crt.sh.

--- a/config.json
+++ b/config.json
@@ -22,6 +22,9 @@
         "virustotal":{
             "enable": false,
             "api-key":""
+        },
+        "crtsh":{
+            "enable": true
         }
     }
 }
