--- a/config.json
+++ b/config.json
@@ -25,6 +25,12 @@
         },
         "crtsh":{
             "enable": true
+        },
+        "censys":{
+            "enable": false,
+            "uid": "",
+            "secret": "",
+            "max_page": 3
         }
     }
 }
