--- a/config.json
+++ b/config.json
@@ -31,6 +31,9 @@
             "uid": "",
             "secret": "",
             "max_page": 3
+        },
+        "hackertarget":{
+            "enable": true
         }
     }
 }
