--- a/config.json
+++ b/config.json
@@ -34,6 +34,9 @@
         },
         "hackertarget":{
             "enable": true
+        },
+        "fsd": {
+            "enable": true
         }
     }
 }
