--- a/config.json
+++ b/config.json
@@ -37,6 +37,9 @@
         },
         "fsd": {
             "enable": true
+        },
+        "microsoft": {
+            "enable": true
         }
     }
 }
