minor fixes + new plugin

--- a/config.json
+++ b/config.json
@@ -40,6 +40,9 @@
         },
         "microsoft": {
             "enable": true
+        },
+        "citrix": {
+            "enable": true
         }
     }
 }
