aws and circl plugin

--- a/config.json
+++ b/config.json
@@ -43,6 +43,14 @@
         },
         "citrix": {
             "enable": true
+        },
+        "aws": {
+            "enable": true
+        },
+        "circl": {
+            "enable": false,
+            "user": "<user>",
+            "pass": "<password>"
         }
     }
 }
