--- a/config.json
+++ b/config.json
@@ -55,6 +55,11 @@
         },
         "dnsdumpster": {
             "enable": true
-        }
+        },
+        "spyse": {
+            "enable": true,
+            "api_token": "<api_token>",
+            "max_pages": 10
+        }    
     }
 }
